# cartographer_ros_for_exploration

./: README.md  migrate_subtrees.sh  navigate_coverage_test.py  package.xml  readme.md  subtree_tools.sh
MOBILE_ROBOT_BASIC/: README.md
MOBILE_ROBOT_BASIC/amr_cartographer/config/: amr_cartographer.lua
MOBILE_ROBOT_BASIC/amr_core/: package.xml
MOBILE_ROBOT_BASIC/amr_core/launch/: amr_bringup.launch.py  bringup.launch.py  bringup.launch_copy.py  core.launch.py  dual_picoscan.launch.py  laser_filter.launch.py  sick_picoscan_rear.launch  teleop.launch.py
MOBILE_ROBOT_BASIC/amr_core/src/: can.cpp  main.cpp  redbot_core  teleop_keyboard.cpp  wheelchair_original_core.cpp
MOBILE_ROBOT_BASIC/amr_description/launch/: amr_description.launch.py
MOBILE_ROBOT_BASIC/amr_description/urdf/: wheelchair.urdf
MOBILE_ROBOT_BASIC/amr_interface/launch/: interface.launch.py
MOBILE_ROBOT_BASIC/amr_interface/src/: enhanced_execution.cpp  execution.cpp  interface.cpp  map_manager.cpp  node_manager.cpp  parameter_updater.cpp  path_status_manager.cpp  test_set_state_action_client.cpp  test_set_state_action_server.cpp
MOBILE_ROBOT_BASIC/amr_navigation/launch/: navigation_redbot.launch.py  navigation_redbot04.launch.py  navigation_rviz.launch.py  navigation_wheelchair.launch.py
MOBILE_ROBOT_BASIC/amr_navigation/rviz/: navigation.rviz
MOBILE_ROBOT_BASIC/amr_navigation/src/: navigation_parameter_updater_node.cpp  periodic_costmap_clearer.cpp  periodic_costmap_clearer_node.cpp
MOBILE_ROBOT_BASIC/amr_serial/: CMakeLists.txt
MOBILE_ROBOT_BASIC/amr_serial/launch/: wheelchair_serial.launch  wheelchair_serial.launch.py
MOBILE_ROBOT_BASIC/amr_serial/param/: serial.yaml
MOBILE_ROBOT_BASIC/amr_serial/scripts/: serial_all.py
MOBILE_ROBOT_BASIC/amr_serial/srv/: GetMode.srv
amr_cartographer/config/: amr_cartographer.lua
amr_core/include/amr_core/: amr_core.hpp
amr_core/launch/: amr_bringup.launch.py  sick_picoscan_front.launch
amr_core/src/: amr_core.cpp  can.cpp  ekf_odometry.cpp  mode_manager.cpp  redbot02_core_backup.cpp  uvbot_interface.cpp  velocity_profile.cpp
amr_description/urdf/: ammr_plugins.xacro  redbot04.urdf
amr_interface/src/: execution.cpp  interface.cpp  parameter_updater copy.cpp  path_status_manager.cpp
amr_navigation/launch/: amr_navigation.launch.py  navigation_launch.py  navigation_redbot.launch.py  navigation_wheelchair.launch.py
amr_navigation/src/: navigation_parameter_updater.cpp
amr_odometry/launch/: odom.launch.py
amr_serial/: package.xml
cartographer_ros/src/: msg_conversion.cpp
caselab_rviz2_plugin/rviz/: ammr.rviz
caselab_rviz2_plugin/src/: ammrTask_panel.cpp
cpp_node_manager_client/: CMakeLists.txt  package.xml
cpp_node_manager_client/src/: cpp_node_manager_client.cpp
data/buildmap_data/: map.yaml
data/map_data/maps/: .pgm  .yaml  caselab_demoroom.pgm  caselab_demoroom.yaml  caselab_two_room.pgm  caselab_two_room.yaml  geumjeong_show.pgm  geumjeong_show.yaml
data/map_data/nodes/: caselab_demoroom_test_node.yaml  (+1 more)
dependency_pkgs/ros2_laser_merger/: CMakeLists.txt
dependency_pkgs/ros2_laser_merger/launch/: visualize_merge_2_scan.launch.py
dependency_pkgs/ros2_laser_merger/src/: laser_scan_merger_node.cpp
dependency_pkgs/webserver_interface_ros2/: setup.py
dependency_sensors/usb_cam/: README_DUAL_CAMERA.md
include/ros2_frontier_based_explore/: utils.hpp
launch/: explore_nav2.launch.py  explore_slam.launch.py  lakibeam1_scan_dual_lidar.launch.py
node_manager/: package.xml  setup.py  test_nodes.yaml
node_manager/node_manager/: node_manager.py
parameter_file/: redbot.yaml  wheelchair.yaml
params/: explore_navigation_samsung_isaac.yaml  new.yaml
pt_gunsol/: package.xml  setup.cfg  setup.py
pt_gunsol/pt_gunsol/: config.yaml  subscriber_service_all copy.py  subscriber_service_all.py
pt_gunsol_instant_actions/: package.xml  setup.cfg  setup.py
pt_gunsol_instant_actions/pt_gunsol_instant_actions/: config.yaml  publisher_service.py
ros2_frontier_based_explore/: CMakeLists.txt
ros2_frontier_based_explore/include/ros2_frontier_based_explore/: costmap.hpp  explore.hpp  frontier_search.hpp
ros2_frontier_based_explore/launch/: explore.launch.py  explore_nav2.launch.py  explore_nav2_samsung_isaac.launch.py  explore_slam.launch.py
ros2_frontier_based_explore/params/: explore_navi_test.yaml  explore_navigation.yaml
ros2_frontier_based_explore/rviz/: explore.rviz
ros2_frontier_based_explore/src/ros2_frontier_based_explore/: explorer.cpp  explorer_new.cpp  node.cpp
ros2_frontier_based_explore/test/: CMakeLists.txt  costmap_test.cpp
ros2_laser_merger/: package.xml  readme.txt
ros2_laser_merger/config/: ammr_params.yaml  params.yaml  wheelchair_params.yaml
ros2_laser_merger/launch/: merge_scan.launch.py
ros2_laser_merger/params/: lidar_back.yaml  lidar_front.yaml
ros2_laser_merger/src/: laser_scan_merger.cpp
rviz/: lakibeam1_scan_dual.rviz
san_msgs/: CMakeLists.txt
san_msgs/msg/: Task.msg
san_msgs/srv/: PauseTask.srv
src/: costmap.cpp  frontier_search.cpp  utils.cpp
test/: frontier_search_test.cpp
waypoint_node_manager/: package.xml  setup.py
waypoint_node_manager/backup_source/: waypoint_node_manager.c  waypoint_node_manager.pyx
waypoint_node_manager/launch/: waypoint_node_manager.launch.py
waypoint_node_manager/waypoint_node_manager/: waypoint_node_manager.c  waypoint_node_manager.py  waypoint_node_manager.pyx
webserver_interface_ros2/: setup.py
webserver_interface_ros2/config/: data_dir.yaml  robot_param.yaml  semantic_places.rviz
webserver_interface_ros2/json_schemas/: semanticObject.json  semanticObject.schema  semanticPlace.json  semanticPlace.schema  semantic_object.json  semantic_object.schema  semantic_place.json  semantic_place.schema  state.json
webserver_interface_ros2/launch/: semantic_place_visualizer.launch.py  webserver_interface_launch.py
webserver_interface_ros2/webserver_interface_ros2/: instantaction_test.py  node_manager.py  node_test.py  ros_handler.py  semantic_place_visualizer.py  service_test.py  test.py  vda5050_manager.py
(+44 files in other folders)
